
HOW TO UPDATE?

- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.4.x WIP
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.x

New:
- Python:        Added Python 3.6 Support

Fixes:
- Windows:       on_move flag was not being used
- Popup:         mouse button keyword now works

-----------------------------------------------------------------------
 VERSION 0.4.5 (10/6/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.5

Updates:
- Stub File:      stub file is now generated automatically

Breaking Changes:
- Label Text:     changed "value" keyword to "default_value"
- Progress Bar:   changed "value" keyword to "default_value"

Fixes:
- Input Text:       Callback_data was not being sent
- Logger:           Log messages only showed up after 2nd call
- Tabs:             Fixed issue with items on tabs not lining up when using same_line
- Stub file:        add_logger added to stub file
- Plots:            reset_yticks was resetting x ticks
- Select Directory: fixed callback crash

-----------------------------------------------------------------------
 VERSION 0.4.4 (10/4/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.4

Breaking Changes:
- Selectable:     changed "disabled" keyword to "enabled"

New Commands:
- Items:          Added "move_item" command
- Logger:         Added "add_logger" command

Changes:
- Examples:       Moved examples to https://github.com/Pcothren/DearPyGui-Examples

New Keywords:
- Line Series:    Added "xy_data_format" #246
- Scatter Series: Added "xy_data_format" #246